--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,9 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 img {
@@ -24,4 +27,37 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+.header, .footer {
+  display: flex;
+  justify-content: space-between;
+}
+
+ul {
+  display:flex;
+  padding-left: 30px;
+
+}
+li {
+  display: flex;
+  padding-right: 30px;
+  color:#eee;
+  list-style-type: none;
+}
+
+a {
+  color:#6c6c6c;
+}
+
+.hero, .input, .buttons {
+  display:flex;
+  justify-content: center;
+  align-self: auto;
+  margin: auto;
+  flex: 0 1 0;
+}
+
+.footer {
+background-color: #eee;
 }
