--- a/flex/07-flex-layout-2/solution/solution.css
+++ b/flex/07-flex-layout-2/solution/solution.css
@@ -43,7 +43,7 @@ body {
   font-weight: 900;
 }
 
-.body {
+.maincontent {
   flex: 1;
   display: flex;
 }
@@ -69,7 +69,7 @@ a {
   font-size: 24px;
 }
 
-.container {
+.cards {
   padding: 32px;
   display: flex;
   flex-wrap: wrap;
